# pyrebuilt

./: .gitignore  .pre-commit-config.yaml  README.md  ids.py  physics.py  pyproject.toml  robot.py  robotcontainer.py  sysid_robot.py  telemetry.py  tuner-project.json
.github/workflows/: ci.yml
.wpilib/: wpilib_preferences.json
autonomous/: routines.py
bline/: bline.py
components/: ballistics.py  climber.py  drivetrain.py  indexer.py  intake.py  leds.py  shooter.py  vision.py  vision_coordinator.py
controllers/: shooter.py
deploy/pathplanner/paths/: Golden Shower.path  Hopper Fill + Shoot.path
motion/: vector_pursuit.py
subsystems/: command_swerve_drivetrain.py
sysid/: robotcontainer.py
sysid/subsystems/: command_swerve_drivetrain.py  flywheel.py
tests/: autonomous_test.py  fuzz_test.py  game_test.py  pyfrc_test.py
utilities/: conversion.py  game.py  positions.py  scalers.py
